# hrds

./: .gitignore  .travis.yml  AUTHORS  Makefile  README.md  conda_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: Makefile  api.rst  conf.py  index.rst  introduction.rst  joss_paper.md  papers.bib
hdrs/: __init__.py  raster.py
hrds/: __init__.py  buffer.py  hrds.py  raster.py  raster_buffer.py
hrds/tests/: base.tif  test_hrds.py
hrds/tests/real_data/: boundaries.shx  high_res_area.shx  sample_points.dbf
tests/: layer1.tif  layer2.tif  test_buffer.py  test_hrds.py  test_interpolation.py  test_raster.asc  test_raster_large.tif  test_raster_nodata_centre.tif
tests/real_data/: boundaries.dbf  boundaries.shp  create_bathy.py  emod_utm.tif  gebco_uk.tif  high_res_area.shp  inspire_data.tif  real_data.qgs  sample_points.shp  sample_points.shx  style.qml  test_mesh.csv  test_mesh.geo  test_mesh.msh  xyz_example.py
